feat(header): add font, logo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Discord</title>
 </head>
 <body>
@@ -12,26 +15,35 @@
     <header>
         <div class="boxed">
             <nav>
-                <div class="navbar headerbox">
-                    <div class="logo border">
-                        <span>Logo</span>
+                <div class="navbar headerbox boxed">
+                    <div class="logo flexbox">
+                        <img src="./img/logo.svg" alt="Discord">
                     </div>
-                    <div class="link border">
-                        <span>Link</span>
-                        <span>Link</span>
-                        <span>Link</span>
-                        <span>Link</span>
-                        <span>Link</span>
+                    <div class="link flexbox">
+                        <span>Scarica</span>
+                        <span>Perchè Discord</span>
+                        <span>Nitro</span>
+                        <span>Sicurezza</span>
+                        <span>Assistenza</span>
                     </div>
-                    <div class="login border">
-                        <span>Login</span>
+                    <div class="login">
+                        <span class="LogButton">Accedi</span>
                     </div>
                 </div>
             </nav> 
         </div>
         <!-- Contenitori Blu e Rosa -->
         <div class="flexbox bluebox">
-            <div class="pinkbox"></div>
+            <div class="pinkbox flexbox boxed">
+                <div class="intro">
+                    <h1 class="flexbox">Il tuo posto per parlare</h1>
+                    <p class="text flexbox">Che tu faccia parte di un club scolastico, gruppo di gamer,comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo insieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso</p>
+                    <div class="chooseBut flexbox">
+                        <span class="chooseLeft">&darr; Scarica per Mac</span>
+                        <span class="chooseRight">Apri Discord nel tuo browser</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
         <!-- Corpo del Layout -->
