--- a/index.html
+++ b/index.html
@@ -50,24 +50,47 @@
     <main>
         <div class="white">
             <div class="bicolor flexbox boxed">
-                <div class="bbox"></div>
-                <div class="bpink"></div>
+                <div class="bbox boxed">
+                    <img src="./img/item1.svg" alt="studygroup">
+                </div>
+                <div class="bpink boxed">
+                    <h2 class="sidetext">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p class="dscpt">I server Discord sono organizzati in canali telematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
+                </div>
             </div>
         </div>
         <div class="grey">
             <div class="bicolor flexbox boxed">
-                <div class="bpink"></div>
-                <div class="bbox"></div>
+                <div class="bpink boxed">
+                    <h2 class="sidetext">Dove trovarsi è facile</h2>
+                    <p class="dscpt">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server posssono vedere che sei lì e unirsi istantaneamente senza dover chiamare</p>
+                </div>
+                <div class="bbox boxed">
+                    <img src="./img/item2.svg" alt="VoiceConnected">
+                </div>
             </div>
         </div>
         <div class="white">
             <div class="bicolor flexbox boxed">
-                <div class="bbox"></div>
-                <div class="bpink"></div>
+                <div class="bbox boxed">
+                    <img src="./img/item3.svg" alt="Coach">
+                </div>
+                <div class="bpink boxed">
+                    <h2 class="sidetext">Da pochi a un fandom</h2>
+                    <p class="dscpt">Dai inizio ad una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
+                </div>
             </div>
         </div>
         <div class="grey">
-            <div class="bgreen"></div>
+            <div class="bgreen boxed">
+                <h2 class="LastTitle">Tecnologia affidabile per tenersi in contatto</h2>
+                <p class="lastparagraph">Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                <img class="center" src="./img/item4-big.svg" alt="justchillin">
+                <div class="imgContainer">
+                    <img src="./img/stars.svg" alt="stars">
+                    <h2>Pronto a iniziare la tua nuova avvertura?</h2>
+                </div>
+            </div>
         </div>
     </main>
     <!-- Parte Finale Layout -->
