feat(Main):Add Download Button

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                     <img src="./img/stars.svg" alt="stars">
                     <h2>Pronto a iniziare la tua nuova avvertura?</h2>
                 </div>
+                <button class="download flexbox boxed"> &darr; Scarica per Mac</button>
             </div>
         </div>
     </main>
