feat add button class

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <span>Assistenza</span>
                         </div>
                         <div class="login">
-                            <span class="LogButton">Accedi</span>
+                            <span class="LogButton button">Accedi</span>
                         </div>
                     </div>
                 </nav> 
@@ -39,8 +39,8 @@
                         <h1 class="flexbox">Il tuo posto per parlare</h1>
                         <p class="text flexbox">Che tu faccia parte di un club scolastico, gruppo di gamer,comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo insieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso</p>
                         <div class="chooseBut flexbox">
-                            <span class="chooseLeft">&darr; Scarica per Mac</span>
-                            <span class="chooseRight">Apri Discord nel tuo browser</span>
+                            <span class="chooseLeft button">&darr; Scarica per Mac</span>
+                            <span class="chooseRight button">Apri Discord nel tuo browser</span>
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                         <img src="./img/stars.svg" alt="stars">
                         <h2>Pronto a iniziare la tua nuova avvertura?</h2>
                     </div>
-                    <button class="download flexbox boxed"> &darr; Scarica per Mac</button>
+                    <button class="download flexbox boxed button"> &darr; Scarica per Mac</button>
                 </div>
             </div>
         </main>
@@ -102,7 +102,7 @@
                         <h2 class="Ending">Il tuo posto per parlare</h2>
                         <div class="flexbox boxed">
                             <img id="ita" src="./img/ita.png" alt="Lingua">
-                            <select class="selectbox flebox" name="Lingua">
+                            <select class="selectbox flebox button" name="Lingua">
                                 <option value="Ita" id="lang">Italiano</option>
                                 <option value="Eng" id="lang">English</option>
                                 <option value="Esp" id="lang">Español</option>
@@ -179,7 +179,7 @@
                         <img src="./img/logo.svg" alt="Logo">
                     </div>
                     <div class="footerColumn">
-                        <button id="signup">Resistrati</button>
+                        <button id="signup button">Resistrati</button>
                     </div>
                 </div>
             </div>
