--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <img src="./img/logo.svg" alt="Logo">
                     </div>
                     <div class="footerColumn">
-                        <button id="signup button">Resistrati</button>
+                        <span class="signup button">Registrati</span>
                     </div>
                 </div>
             </div>
